# ft_clib

./: .gitignore  CMakeLists.txt  README.md  clib_test.cpp  ft_clib.c  ft_clib.h  printtest.c  test.c
ft_clib/: CMakeLists.txt  clib_test.cpp  ft_clib.c  ft_clib.h  logger.c
ft_list/: CMakeLists.txt  ft_list.c  ft_list.h  ft_node.c  list_test.cpp
ft_printf/: CMakeLists.txt  buffer.c  flags.c  ft_printf.c  ft_printf.h  ft_printf_private.h  print_dispatcher.c  print_functions.c  print_number.c  print_string.c  print_unsigned_number.c  printf_test.cpp  printloop.c
